--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Grace&#39;s Blog</title>
-    <meta name="description" content="技术、生活、信仰">
+    <meta name="description" content="信仰、工作、生活">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     
-    <link rel="preload" href="/assets/css/0.styles.b2fa97c3.css" as="style"><link rel="preload" href="/assets/js/app.24701e53.js" as="script"><link rel="prefetch" href="/assets/js/10.61335b86.js"><link rel="prefetch" href="/assets/js/11.563a211c.js"><link rel="prefetch" href="/assets/js/12.19c3390b.js"><link rel="prefetch" href="/assets/js/13.98011d76.js"><link rel="prefetch" href="/assets/js/14.318a38cc.js"><link rel="prefetch" href="/assets/js/15.bc33d0bd.js"><link rel="prefetch" href="/assets/js/16.43c2e203.js"><link rel="prefetch" href="/assets/js/17.64947062.js"><link rel="prefetch" href="/assets/js/18.42bdf1f2.js"><link rel="prefetch" href="/assets/js/19.56785aa1.js"><link rel="prefetch" href="/assets/js/20.0070db07.js"><link rel="prefetch" href="/assets/js/3.bf92a271.js"><link rel="prefetch" href="/assets/js/4.a187db1a.js"><link rel="prefetch" href="/assets/js/5.35112557.js"><link rel="prefetch" href="/assets/js/6.0272308b.js"><link rel="prefetch" href="/assets/js/7.71191f64.js"><link rel="prefetch" href="/assets/js/8.6ff3f9ff.js"><link rel="prefetch" href="/assets/js/9.54001086.js"><link rel="prefetch" href="/assets/js/vendors~docsearch.32940b96.js">
+    <link rel="preload" href="/assets/css/0.styles.b2fa97c3.css" as="style"><link rel="preload" href="/assets/js/app.d326035b.js" as="script"><link rel="prefetch" href="/assets/js/10.5abe15ce.js"><link rel="prefetch" href="/assets/js/11.a35fa6d1.js"><link rel="prefetch" href="/assets/js/12.320921c7.js"><link rel="prefetch" href="/assets/js/13.4cb9e199.js"><link rel="prefetch" href="/assets/js/14.00078334.js"><link rel="prefetch" href="/assets/js/15.58a01617.js"><link rel="prefetch" href="/assets/js/16.ba766321.js"><link rel="prefetch" href="/assets/js/17.26703880.js"><link rel="prefetch" href="/assets/js/18.d67b966a.js"><link rel="prefetch" href="/assets/js/19.ff336eae.js"><link rel="prefetch" href="/assets/js/20.16408d3a.js"><link rel="prefetch" href="/assets/js/21.b3537ca5.js"><link rel="prefetch" href="/assets/js/22.73d16b2f.js"><link rel="prefetch" href="/assets/js/3.bf92a271.js"><link rel="prefetch" href="/assets/js/4.a187db1a.js"><link rel="prefetch" href="/assets/js/5.35112557.js"><link rel="prefetch" href="/assets/js/6.0272308b.js"><link rel="prefetch" href="/assets/js/7.71191f64.js"><link rel="prefetch" href="/assets/js/8.8d6740dd.js"><link rel="prefetch" href="/assets/js/9.f836e508.js"><link rel="prefetch" href="/assets/js/vendors~docsearch.32940b96.js">
     <link rel="stylesheet" href="/assets/css/0.styles.b2fa97c3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.24701e53.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.d326035b.js" defer></script>
   </body>
 </html>
